fix: line height for body-small adjusted to 1.5rem. Minor adjustment made to spacing for H3 in cards

--- a/packages/@featherds/styles/themes/_base-theme.scss
+++ b/packages/@featherds/styles/themes/_base-theme.scss
@@ -102,7 +102,7 @@ $body-large: (
 
 $body-small: (
   $body-small-font-size: 0.875rem,
-  $body-small-line-height: 1.25rem,
+  $body-small-line-height: 1.5rem,
   $body-small-letter-spacing: 0.01786em,
   $body-small-font-weight: var($font-normal),
   $body-small-text-transform: none,
